# TrustChain

./: .gitignore  ARCHITECTURE.md  LEVEL_6_PLANNER.md  README.md  SECURITY.md  USER_GUIDE.md  package-lock.json  package.json  trustchain_prd.md
.github/workflows/: ci.yml
backend/: .env.example  package-lock.json  package.json
backend/src/: db.js  server.js
backend/src/middleware/: auth.js
backend/src/routes/: auth.js  circles.js  dev.js  lender.js  loans.js  pools.js  score.js  stellar.js  users.js
backend/src/services/: creditEngine.js  stellar.js
contracts/: Cargo.toml  README.md
contracts/trustchain_circle/: Cargo.toml
contracts/trustchain_circle/src/: lib.rs
contracts/trustchain_loan/: Cargo.toml
contracts/trustchain_loan/src/: lib.rs
contracts/trustchain_score/: Cargo.toml
contracts/trustchain_score/src/: lib.rs
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/api/circles/: route.ts
frontend/src/app/api/health/: route.ts
frontend/src/app/circles/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/leaderboard/: page.tsx
frontend/src/app/lender/: page.tsx
frontend/src/app/loans/: page.tsx
frontend/src/app/metrics/: page.tsx
frontend/src/components/: FloatingLogos.tsx  Footer.tsx  Navbar.tsx  ScoreGauge.tsx  WalletConnect.tsx
frontend/src/lib/: api.ts  apiAuth.ts  creditEngine.ts  models.ts  mongodb.ts
frontend/src/store/: walletStore.ts
(+33 files in other folders)
