[workspace]
resolver = "2"
members = [
    "trustchain_loan",
    "trustchain_score",
    "trustchain_circle",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.4" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
